      (partly fixing #687255, b= support has to wait for jessie)
  * apt-pkg/contrib/netrc.cc:
    - remove the 64 char limit for login/password in internal usage
    - remove 256 char line limit by using getline() (POSIX.1-2008)
  
  [ Michael Vogt ]
  * increase the maximum netrc login/password size and show proper
    error message on overflow

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 19 Sep 2012 11:29:56 +0200

apt (0.9.7.5) unstable; urgency=low

  [ Manpages translation updates ]
  * Japanese (KURASAWA Nozomu) (Closes: #684435)
  * Portuguese (Américo Monteiro) (Closes: #686975)

  [ David Kalnischkies ]
  * handle packages without a mandatory architecture (debian-policy §5.3)
    by introducing a pseudo-architecture 'none' so that the small group of
    users with these packages can get right of them without introducing too
    much hassle for other users (Closes: #686346)
  * apt-pkg/cdrom.cc:
    - copy only configured translation files from a CD-ROM and not all
      available translation files preventing new installs with d-i from
      being initialized with all translations (Closes: #678227)
    - handle Components in the reduction for the source.list as multi-arch CDs
      otherwise create duplicated source entries (e.g. "wheezy main main")
  * apt-pkg/packagemanager.cc:
    - unpack versions only in case a different version from the package
      is currently in unpack state to recover from broken system states
      (like different file in M-A:same package and other dpkg errors)
      and avoid re-unpack otherwise (Closes: #670900)
  * debian/control:
    - let libapt-pkg break apt < 0.9.4 to ensure that the installed http-
      method supports the new redirection-style, thanks to Raphael Geissert
      for reporting & testing (Closes: #685192)
  * doc/apt_preferences.5.xml:
    - use the correct interval (x <= P < y) for pin value documentation as
      these are the intervals used by the code (Closes: #685989)